Fixed profile not showing up bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -376,4 +376,8 @@ footer {
     box-shadow: 0px 0px rgba(0,0,0,.25)
 }
 
+#user-id{
+    font-size: 5vw;
+}
+
 /*#endregion*/
